# serializer version: 1
# name: test_no_update_available[rgb_websocket]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      <UpdateEntityStateAttribute.AUTO_UPDATE: 'auto_update'>: False,
      <EntityStateAttribute.DEVICE_CLASS: 'device_class'>: 'firmware',
      <UpdateEntityStateAttribute.DISPLAY_PRECISION: 'display_precision'>: 0,
      <EntityStateAttribute.ENTITY_PICTURE: 'entity_picture'>: '/api/brands/integration/wled/icon.png',
      <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'WLED WebSocket Firmware',
      <UpdateEntityStateAttribute.IN_PROGRESS: 'in_progress'>: False,
      <UpdateEntityStateAttribute.INSTALLED_VERSION: 'installed_version'>: '0.99.0',
      <UpdateEntityStateAttribute.LATEST_VERSION: 'latest_version'>: '0.99.0',
      <UpdateEntityStateAttribute.RELEASE_SUMMARY: 'release_summary'>: None,
      <UpdateEntityStateAttribute.RELEASE_URL: 'release_url'>: 'https://github.com/wled/WLED/releases/tag/v0.99.0',
      <UpdateEntityStateAttribute.SKIPPED_VERSION: 'skipped_version'>: None,
      <EntityStateAttribute.SUPPORTED_FEATURES: 'supported_features'>: <UpdateEntityFeature: 3>,
      <UpdateEntityStateAttribute.TITLE: 'title'>: 'WLED',
      <UpdateEntityStateAttribute.UPDATE_PERCENTAGE: 'update_percentage'>: None,
    }),
    'context': <ANY>,
    'entity_id': 'update.wled_websocket_firmware',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'off',
  })
# ---
# name: test_update_available.2
  StateSnapshot({
    'attributes': ReadOnlyDict({
      <UpdateEntityStateAttribute.AUTO_UPDATE: 'auto_update'>: False,
      <EntityStateAttribute.DEVICE_CLASS: 'device_class'>: 'firmware',
      <UpdateEntityStateAttribute.DISPLAY_PRECISION: 'display_precision'>: 0,
      <EntityStateAttribute.ENTITY_PICTURE: 'entity_picture'>: '/api/brands/integration/wled/icon.png',
      <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'WLED RGB Light Firmware',
      <UpdateEntityStateAttribute.IN_PROGRESS: 'in_progress'>: False,
      <UpdateEntityStateAttribute.INSTALLED_VERSION: 'installed_version'>: '0.14.4',
      <UpdateEntityStateAttribute.LATEST_VERSION: 'latest_version'>: '0.99.0',
      <UpdateEntityStateAttribute.RELEASE_SUMMARY: 'release_summary'>: None,
      <UpdateEntityStateAttribute.RELEASE_URL: 'release_url'>: 'https://github.com/wled/WLED/releases/tag/v0.99.0',
      <UpdateEntityStateAttribute.SKIPPED_VERSION: 'skipped_version'>: None,
      <EntityStateAttribute.SUPPORTED_FEATURES: 'supported_features'>: <UpdateEntityFeature: 3>,
      <UpdateEntityStateAttribute.TITLE: 'title'>: 'WLED',
      <UpdateEntityStateAttribute.UPDATE_PERCENTAGE: 'update_percentage'>: None,
    }),
    'context': <ANY>,
    'entity_id': 'update.wled_rgb_light_firmware',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'on',
  })
# ---
# name: test_update_available[update.wled_rgb_light_firmware-entry]
  EntityRegistryEntrySnapshot({
    'aliases': list([
      None,
    ]),
    'area_id': None,
    'capabilities': None,
    'config_entry_id': <ANY>,
    'config_subentry_id': <ANY>,
    'device_class': None,
    'device_id': <ANY>,
    'disabled_by': None,
    'domain': 'update',
    'entity_category': <EntityCategory.CONFIG: 'config'>,
    'entity_id': 'update.wled_rgb_light_firmware',
    'has_entity_name': True,
    'hidden_by': None,
    'icon': None,
    'id': <ANY>,
    'labels': set({
    }),
    'name': None,
    'object_id_base': 'Firmware',
    'options': dict({
    }),
    'original_device_class': <UpdateDeviceClass.FIRMWARE: 'firmware'>,
    'original_icon': None,
    'original_name': 'Firmware',
    'platform': 'wled',
    'previous_unique_id': None,
    'suggested_object_id': None,
    'supported_features': <UpdateEntityFeature: 3>,
    'translation_key': None,
    'unique_id': 'aabbccddeeff',
    'unit_of_measurement': None,
  })
# ---
# name: test_update_available[update.wled_rgb_light_firmware-state]
  StateSnapshot({
    'attributes': ReadOnlyDict({
      <UpdateEntityStateAttribute.AUTO_UPDATE: 'auto_update'>: False,
      <EntityStateAttribute.DEVICE_CLASS: 'device_class'>: 'firmware',
      <UpdateEntityStateAttribute.DISPLAY_PRECISION: 'display_precision'>: 0,
      <EntityStateAttribute.ENTITY_PICTURE: 'entity_picture'>: '/api/brands/integration/wled/icon.png',
      <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'WLED RGB Light Firmware',
      <UpdateEntityStateAttribute.IN_PROGRESS: 'in_progress'>: False,
      <UpdateEntityStateAttribute.INSTALLED_VERSION: 'installed_version'>: '0.14.4',
      <UpdateEntityStateAttribute.LATEST_VERSION: 'latest_version'>: '0.99.0',
      <UpdateEntityStateAttribute.RELEASE_SUMMARY: 'release_summary'>: None,
      <UpdateEntityStateAttribute.RELEASE_URL: 'release_url'>: 'https://github.com/wled/WLED/releases/tag/v0.99.0',
      <UpdateEntityStateAttribute.SKIPPED_VERSION: 'skipped_version'>: None,
      <EntityStateAttribute.SUPPORTED_FEATURES: 'supported_features'>: <UpdateEntityFeature: 3>,
      <UpdateEntityStateAttribute.TITLE: 'title'>: 'WLED',
      <UpdateEntityStateAttribute.UPDATE_PERCENTAGE: 'update_percentage'>: None,
    }),
    'context': <ANY>,
    'entity_id': 'update.wled_rgb_light_firmware',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'on',
  })
# ---
# name: test_update_information_available
  StateSnapshot({
    'attributes': ReadOnlyDict({
      <UpdateEntityStateAttribute.AUTO_UPDATE: 'auto_update'>: False,
      <EntityStateAttribute.DEVICE_CLASS: 'device_class'>: 'firmware',
      <UpdateEntityStateAttribute.DISPLAY_PRECISION: 'display_precision'>: 0,
      <EntityStateAttribute.ENTITY_PICTURE: 'entity_picture'>: '/api/brands/integration/wled/icon.png',
      <EntityStateAttribute.FRIENDLY_NAME: 'friendly_name'>: 'WLED RGB Light Firmware',
      <UpdateEntityStateAttribute.IN_PROGRESS: 'in_progress'>: False,
      <UpdateEntityStateAttribute.INSTALLED_VERSION: 'installed_version'>: '0.14.4',
      <UpdateEntityStateAttribute.LATEST_VERSION: 'latest_version'>: None,
      <UpdateEntityStateAttribute.RELEASE_SUMMARY: 'release_summary'>: None,
      <UpdateEntityStateAttribute.RELEASE_URL: 'release_url'>: None,
      <UpdateEntityStateAttribute.SKIPPED_VERSION: 'skipped_version'>: None,
      <EntityStateAttribute.SUPPORTED_FEATURES: 'supported_features'>: <UpdateEntityFeature: 3>,
      <UpdateEntityStateAttribute.TITLE: 'title'>: 'WLED',
      <UpdateEntityStateAttribute.UPDATE_PERCENTAGE: 'update_percentage'>: None,
    }),
    'context': <ANY>,
    'entity_id': 'update.wled_rgb_light_firmware',
    'last_changed': <ANY>,
    'last_reported': <ANY>,
    'last_updated': <ANY>,
    'state': 'unknown',
  })
# ---
